--- a/style.css
+++ b/style.css
@@ -59,25 +59,91 @@ body {
 
 
 /* stiky */
-main {
-    padding: 10px 20%;
+.paddi {
+    padding: 10px 20% !important;
 }
 
 .width-items {
     width: 1850px !important;
 }
 
-.d-wrap {
-    width: 1
+
+
+/*------------------------------------ investment-background-image------------------------------------- */
+.investment-background-image {
+    background-image: url(images/baner/20230318_145523.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
-/* responsive */
+.investment-background-text {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 110px 250px !important;
+
+}
+
+.fs-investment {
+    font-size: 60px;
+    font-weight: 600;
+    padding-bottom: 20px;
+
+}
+
+.fs-investment span {
+    font-size: 67px;
+    font-weight: 600;
+}
+
+/* fs-span-investment */
+.fs-span-investment {
+    color: #27b362;
+}
+
+/* ---------------------------------responsive------------------------------------ */
 @media (max-width:992px) {
+    .investment-background-text {
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 70px 100px !important;
+
+    }
+
     .hidden-items-one {
         display: block;
     }
 
     .hidden-items-two {
         display: none !important;
+    }
+
+    .fs-investment {
+        font-size: 40px;
+
+        padding: 0px 0px;
+
+    }
+
+    .fs-investment span {
+        font-size: 47px;
+    }
+}
+
+@media (max-width:634px) {
+    .investment-background-text {
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 30px 10px !important;
+
+    }
+
+    .fs-investment {
+        font-size: 30px;
+        padding: 0px 0px;
+
+
+    }
+
+    .fs-investment span {
+        font-size: 37px;
     }
 }
